--- a/styles.css
+++ b/styles.css
@@ -1,9 +1,34 @@
-.bg{
-    background-color: burlywood, 0.6;
-    color: darkred;
-}
-
-.button{
+.head{
+    font: 35px Arial;
+    font-weight: Bold;
+    display: flex;
+    justify-content: center;
+    margin: 3%;
+    background-color: skyblue; 
+  }
+  
+  .nav{
+    size: 1em;
+    background: yellow;
+    height: 45%;
+    width: 40%;
+    size: 1.5em;
+  }
+  
+  .form{
+    font: 1.5em Arial, sans serif, Mono;
+    padding: 3% 1%;
+    display: grid;
+    height: 15%;
+    width: 30%;
+    align-content: center;
+    justify-content: space-between;
+    grid-template-columns: auto auto;
+    
+  }
+  
+  
+  .button{
     display: block;
     height: 20px;
     width: 15px;
@@ -65,16 +90,38 @@
     padding: 16px;
   }
 
-  .master{
-    font-family: Arial, Helvetica, sans-serif;
-    color: greenyellow;
-    font-size: 1.1em;
-    background-color: rgb(104, 32, 139);
+  .wilk{
+    background-color: antiquewhite;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    color: #4B0082;
+    font-style: italic;
   }
 
-  .other{
-    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif ;
-    background-color: darkgreen;
-    Color: burlywood;
+  .banner {
+    background-color: aquamarine;
+    text-align: center;
+    font-size: 2em;
+    Color: rgba(255, 229, 80, 0.904);
+    
+  }
 
+  .stuff{
+    text-align: center;
+    text-emphasis: Filled;
+    text-emphasis-style: ;
+    text-emphasis-color: aquamarine;
+
+  }
+
+  .play{
+    background-color: whitesmoke;
+    Color: Black;
+
+  }
+
+  .demo{
+    text-align: center;
+    color:#111;
+    padding:0em;
+    
   }
